# wc2026-chemistry

./: .gitignore  CREDITS.md  README.md  pyproject.toml  requirements.txt
chemistry/: export.py  formation.py  ingest.py  joi.py  minutes.py  names.py  pair_card.py  pipeline.py  players.py  rank.py  render.py  squads.py  stats.py  vaep_model.py  xg_model.py  xt_model.py
exports/: manifest.json
outputs/: career_familiarity.parquet  chemistry.json  chemistry_evidence.json  chemistry_evidence_player_deltas.csv  club_chemistry.json  club_chemistry_historic.json  cross_context_chemistry.json  elite_opponent_analysis.json  goals_assists.parquet  intl_joi_v2.parquet  joi90.parquet  joi90_vaep.parquet  joi90_xg.parquet  joi90_xt.parquet  joi_per_match.parquet  lineups.parquet  player_chemistry_v3.NOTES.md  player_chemistry_v3.parquet  player_dependency.json  player_per90.parquet  sb_club_joi_per_match.parquet  sb_lineups_all.parquet  wc2026_squad_chemistry.json  wyscout_joi_per_match_vaep.parquet  xg_chain_per_match.parquet
scripts/: analyze_cross_context.py  analyze_historic_chemistry.py  bootstrap_squads.py  build.py  build_player_chemistry_v3.py  chemistry_evidence_analysis.py  deploy.sh  elite_opponent_analysis.py  export.py  fetch_headshots.py  phase2_sb_club_pipeline.py  sb_club_pipeline.py  serve.sh  train_vaep.py  vaep_cross_context_pipeline.py  wc2026_squad_chemistry.py  wyscout_pipeline.py
site/: app.js  index.html  nation.html  pitch.js  style.css
tests/: conftest.py  test_export.py  test_ingest.py  test_joi.py  test_minutes.py  test_names.py  test_pipeline.py  (+8 more)
(+1144 files in other folders)
