[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wc2026-chemistry"
description = "Player chemistry pipeline for FIFA WC 2026"
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]

[tool.setuptools]
packages = ["chemistry"]

[tool.setuptools.dynamic]
version = {attr = "chemistry.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
